Fixed more css bugs such as missing paddings and extra icons

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -4754,7 +4754,8 @@ h3, .h3 {
     width: 1170px; } }
 
 .container-top {
-  padding-top: 18px; }
+  margin-top: 40px;
+  margin-bottom: 30px; }
 
 .container-sidebars {
   margin-top: 20px;
@@ -4782,6 +4783,9 @@ h3, .h3 {
   box-shadow: 0px 6px 20px 2px rgba(46, 46, 46, 0.2);
   border: none;
   border-radius: 0; }
+
+.card-brand.card-brand-white .card-block {
+  padding: 0.938rem; }
 
 .card-brand-white {
   background-color: #fff;
@@ -4874,7 +4878,8 @@ h3, .h3 {
   background-color: #2a2b2c; }
 
 #code .col-md-6 .btn-default {
-  background-color: #2a2b2c; }
+  background-color: #2a2b2c;
+  border: 1px solid #fff; }
 
 #code .card-container:hover .arrows-container {
   opacity: 1; }
@@ -4908,7 +4913,7 @@ h3, .h3 {
 .main {
   height: 100%;
   overflow: auto;
-  padding-top: 18px;
+  padding-top: 20px;
   margin-left: 241px;
   margin-right: 241px; }
 
