--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -21,7 +21,6 @@ body{
 }
 
 
-
 #body, body, html{
 	height: 100%;
 }
@@ -52,6 +51,9 @@ h3, .h3 {
   // margin-bottom: $line-height-computed;
 }
 
+
+
+
 //== Containers
 //
 
@@ -68,7 +70,8 @@ h3, .h3 {
 }
 
 .container-top{
-	padding-top: 18px;
+	margin-top: 40px;
+	margin-bottom: 30px;
 }
 
 .container-sidebars{
@@ -104,6 +107,10 @@ h3, .h3 {
 		box-shadow: 0px 6px 20px 2px rgba(46,46,46,0.2);
 		border: none;
 		border-radius: 0;
+}
+
+.card-brand.card-brand-white .card-block{
+	padding: 0.938rem;
 }
 
 .card-brand-white{
@@ -225,6 +232,7 @@ h3, .h3 {
 
 #code .col-md-6 .btn-default{
 	background-color: $btn-dark-border;
+	border: 1px solid $brand-white;
 }
 
 #code .card-container:hover .arrows-container{
@@ -279,7 +287,7 @@ h3, .h3 {
 .main{
 	height: 100%;
 	overflow: auto;
-	padding-top: 18px;
+	padding-top: 20px;
 	margin-left: 241px;
   margin-right: 241px;
 }
@@ -383,7 +391,6 @@ h3, .h3 {
 #code .arrows-container{
 	opacity: 0.1;
 }
-
 
 //
 .pattern-width{
